Add controllers to ProductService, AdminProductService Debug of processes